--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,4 @@ services:
     ports:
       - "80:80"
       - "443:443"
-    volumes:
-      - ./nginx.conf:/etc/nginx/nginx.conf:ro
-      - ./html:/usr/share/nginx/html:ro
-    restart: always
+    restart: unless-stopped
