--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,4 +6,7 @@ services:
     ports:
       - "80:80"
       - "443:443"
+    volumes:
+      - ./nginx.conf:/etc/nginx/nginx.conf
+      - ./html:/usr/share/nginx/html
     restart: unless-stopped
